--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bower": "1.7.9",
     "casperjs": "1.1.1",
     "coffee-script": "^1.9.1",
+    "coffeescript": "^2.2.2",
     "grunt": "^0.4.5",
     "grunt-bower-task": "^0.4.0",
     "grunt-contrib-copy": "1.0.0",
